Added design files

--- a/src/ComicBookGallery/Views/ComicBooks/Detail.cshtml
+++ b/src/ComicBookGallery/Views/ComicBooks/Detail.cshtml
@@ -1,17 +1,7 @@
 ﻿@{
     Layout = null;
 
-    var seriesTitle = "The Amazing Spider-Man!";
-    var issue = 700;
-    var description = "<p>Final issue! Witness the final hours of Doctor Octopus' life and his one, last, great act of revenge! Even if Spider-Man survives...<strong>will Peter Parker?</strong></p>";
-    var artist = new string[]
-        {
-        "Script: Dan Slott",
-        "Pencils: Humberto Ramos",
-        "Inks: Victor Olazaba",
-        "Colors: Edgar Delgado",
-        "Letters: Chris Eliopoulos"
-        };
+    
  }
 
 
@@ -24,17 +14,17 @@
 </head>
 <body>
     <div>
-        <h1>@seriesTitle</h1>
-        <h2>Issue# @issue</h2>
+        <h1>@ViewBag.SeriesTitle</h1>
+        <h2>Issue# @ViewBag.Issue</h2>
         <h5>Description:</h5>
 
-            <div>@Html.Raw(description)</div>
-        @if (artist.Length > 0)
+            <div>@Html.Raw(ViewBag.Description)</div>
+        @if (ViewBag.Artist.Length > 0)
         {
             <Artist>Artist:</Artist>
             <div>
                 <ul>
-                 @foreach (var art in artist)
+                 @foreach (var art in ViewBag.Artist)
                  {
                         <li>@art</li>
                  }
