--- a/src/ComicBookGallery/Views/ComicBooks/Detail.cshtml
+++ b/src/ComicBookGallery/Views/ComicBooks/Detail.cshtml
@@ -1,37 +1,23 @@
 ﻿@{
-    Layout = null;
-
-    
+    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Comic Book Detail";
  }
 
+<h1>@ViewBag.SeriesTitle</h1>
+<h2>Issue# @ViewBag.Issue</h2>
+<h5>Description:</h5>
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title></title>
-</head>
-<body>
+<div>@Html.Raw(ViewBag.Description)</div>
+@if (ViewBag.Artist.Length > 0)
+{
+    <Artist>Artist:</Artist>
     <div>
-        <h1>@ViewBag.SeriesTitle</h1>
-        <h2>Issue# @ViewBag.Issue</h2>
-        <h5>Description:</h5>
-
-            <div>@Html.Raw(ViewBag.Description)</div>
-        @if (ViewBag.Artist.Length > 0)
-        {
-            <Artist>Artist:</Artist>
-            <div>
-                <ul>
-                 @foreach (var art in ViewBag.Artist)
-                 {
-                        <li>@art</li>
-                 }
-                </ul>
-            </div>
-        }
-        
+        <ul>
+            @foreach (var art in ViewBag.Artist)
+            {
+                <li>@art</li>
+            }
+        </ul>
     </div>
-</body>
-</html>
+}
+  
